log
Tue 21 Mar 2023 12:54:52 AM UTC: 
 tests:  0|6
total_score: 0/70
9d136e1
Tue 21 Mar 2023 12:56:34 AM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
3c2d62d
Tue 21 Mar 2023 12:58:39 AM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
19d871a
Tue 21 Mar 2023 12:59:59 AM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
79d2702
Tue 21 Mar 2023 01:01:44 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
47a2bc4
Tue 21 Mar 2023 01:08:06 AM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
c138645
Tue 21 Mar 2023 01:08:37 AM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
5d44828
Tue 21 Mar 2023 01:10:29 AM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
704f33c
Tue 21 Mar 2023 01:11:16 AM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
164d823
Tue 21 Mar 2023 01:11:48 AM UTC: 
 list.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  1|5
total_score: 10/70
a07735b
Tue 21 Mar 2023 01:12:05 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:41:11: error: unused variable ‘cabeza’ [-Werror=unused-variable]
   41 |     Node *cabeza = list->head;
      |           ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
c9ad0c6
Tue 21 Mar 2023 01:12:24 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
0061c13
Tue 21 Mar 2023 01:12:38 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:45:10: error: unused variable ‘dato’ [-Werror=unused-variable]
   45 |     void*dato = cabeza->data;
      |          ^~~~
cc1: all warnings being treated as errors
Compilation failed
5e56de1
Tue 21 Mar 2023 01:12:47 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
12a9f21
Tue 21 Mar 2023 01:18:47 AM UTC: 
 list.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  2|5
total_score: 15/70
cc70c57
Tue 21 Mar 2023 01:21:15 AM UTC: 
 list.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  2|5
total_score: 15/70
791f261
Tue 21 Mar 2023 01:23:55 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
0df7f4f
Tue 21 Mar 2023 01:24:23 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
2b487f5
Tue 21 Mar 2023 01:26:31 AM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  6|4
total_score: 25/70
21d223e
Tue 21 Mar 2023 01:28:28 AM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  9|3
total_score: 35/70
38425c1
Tue 21 Mar 2023 01:36:03 AM UTC: 
 list.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  0|0
d98da76
Tue 21 Mar 2023 01:39:13 AM UTC: 
 list.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  9|3
total_score: 35/70
6f68ac3
